revert deletion error
